Added about us page content

--- a/about-us.html
+++ b/about-us.html
@@ -5,16 +5,329 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>2hats | about us</title>
+    <title>2hats | About us</title>
     <link rel="icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 
+    <header class="about-us-header">
+        <div class="top-menu">
+            <div class="container">
+                <img src="img/company-logo.png" alt="" class="logo">
+                <div class="navbar">
+                    <ul>
+                        <li>
+                            <a href="index.html">Students</a>
+                        </li>
+                        <li>
+                            <a href="company.html">Companies</a>
+                        </li>
+                        <li class="active">
+                            <a href="">About Us</a>
+                        </li>
+                        <li>
+                            <a href="faq.html">FAQ</a>
+                        </li>
+                        <li>
+                            <a href="https://blog.2hats.com.au/">Stories &amp; Advice</a>
+                        </li>
+                    </ul>
+                    <button class="primary-button login">Log In</button>
+                    <button class="primary-button sign-up">Sign Up</button>
+                </div>
+                <div class="navbar-toggler" id="navbar-toggler">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="container">
+                <h1>Grow. Achieve. Succeed.</h1>
+            </div>
+        </div>
+    </header>
+
+    <section class="our-mission">
+        <div class="container">
+            <h2 class="text-center">Our Mission</h2>
+            <p class="text-center">Growing the next leaders of tomorrow by bridging them to their passions and
+                aspirations</p>
+        </div>
+    </section>
+
+    <section class="our-story">
+        <div class="container">
+            <h2>Our Story</h2>
+            <p>What you do, it’s more than just work or a job. Our entire team itself has been
+                built from this vision. It’s a part of who we are, we are what we do. Finding that true pathway
+                however, requires experiences that many young people aren’t able to find. </p>
+            <p class="quote">
+                “We wanted to create something more accessible, that helped people get to where
+                they needed to be”
+                <span class="author">— Gloria Li, Co-Founder</span>
+            </p>
+            <p>That’s why we built 2hats. We want to give every student the opportunity to achieve their full
+                potential, to discover their purpose and where they can have the greatest impact. Finding true passion
+                in the work you do - that’s our ultimate goal.</p>
+        </div>
+    </section>
+
+    <section class="our-history">
+        <!-- <img src="img/about-us-path-3.svg" alt="" class="company-path"> -->
+        <div class="container">
+            <div class="timeline">
+                <div class="vertical-line"></div>
+                <div class="arrow-down"></div>
+            </div>
+            <h2>How Far We’ve Come</h2>
+            <div class="step step-1">
+                <div class="bullet">
+                </div>
+                <div class="step-content">
+                    <div class="step-date">September 2017</div>
+                    <div class="step-description">We began generating our idea for a career development service for
+                        businesses and students</div>
+                </div>
+            </div>
+            <div class="step step-2">
+                <div class="step-content">
+                    <div class="step-date">January 2018</div>
+                    <div class="step-description">Began development of our app and web portal</div>
+                </div>
+            </div>
+            <div class="step step-3">
+                <div class="step-content">
+                    <div class="step-date">January 2018</div>
+                    <div class="step-description">Tested our system and hired our own interns</div>
+                </div>
+            </div>
+            <div class="step step-4">
+                <div class="step-content">
+                    <div class="step-date">January 2018</div>
+                    <div class="step-description">Launched our new app and web portal!</div>
+                </div>
+            </div>
+            <div class="step step-5">
+                <div class="step-content">
+                    <div class="step-date">February 2018</div>
+                    <div class="step-description">O-Week Launch Campaign</div>
+                </div>
+            </div>
+            <div class="step step-6">
+                <div class="step-content">
+                    <div class="step-date">February 2018</div>
+                    <div class="step-description">Began signing up students into our system and reviewing their resumes</div>
+                </div>
+            </div>
+            <div class="step step-7">
+                <div class="step-content">
+                    <div class="step-date">March 2018</div>
+                    <div class="step-description">Our first group of interns finished their placements and over 50%
+                        received an offer to move to part-time positions </div>
+                </div>
+            </div>
+            <div class="step step-8">
+                <div class="step-content">
+                    <div class="step-date">May 2018</div>
+                    <div class="step-description">We re-launched our website with a new design</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="our-team">
+        <div class="container">
+            <h2 class="text-right">Our Team</h2>
+            <div class="row">
+                <div class="member member-1">
+                    <div class="member-picture">
+                        <div class="member-picture-container">
+                            <img src="img/about-us-kelvin 4@4x.png" alt="">
+                        </div>
+                    </div>
+                    <div class="member-name">
+                        Kelvin Li
+                    </div>
+                    <div class="member-position">
+                        Co-Founder
+                    </div>
+                </div>
+                <div class="member member-2">
+                    <div class="member-picture">
+                        <div class="member-picture-container">
+                            <img src="img/about-us-gloria 4@4x.png" alt="">
+                        </div>
+                    </div>
+                    <div class="member-name">
+                        Gloria Li
+                    </div>
+                    <div class="member-position">
+                        Co-Founder
+                    </div>
+                </div>
+                <div class="member member-3">
+                    <div class="member-picture">
+                        <div class="member-picture-container">
+                            <img src="img/about-us-chenny 3@4x.png" alt="">
+                        </div>
+                    </div>
+                    <div class="member-name">
+                        Chenny Chen
+                    </div>
+                    <div class="member-position">
+                        Business Developer
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="member member-4">
+                    <div class="member-picture">
+                        <div class="member-picture-container">
+                            <img src="img/about-us-sam 2@4x.png" alt="">
+                        </div>
+                    </div>
+                    <div class="member-name">
+                            Samuel Hill
+                    </div>
+                    <div class="member-position">
+                            Business Developer
+                    </div>
+                </div>
+                <div class="member member-5">
+                    <div class="member-picture">
+                        <div class="member-picture-container">
+                            <img src="img/about-us-perrin 2@4x.png" alt="">
+                        </div>
+                    </div>
+                    <div class="member-name">
+                            Perrin Anto Jones
+                    </div>
+                    <div class="member-position">
+                            Product Design Manager
+                    </div>
+                </div>
+                <div class="member member-6">
+                    <div class="member-picture">
+                        <div class="member-picture-container">
+                            <img src="img/about-us-minjie 4@4x.png" alt="">
+                        </div>
+                    </div>
+                    <div class="member-name">
+                            Minjie Shi 
+                    </div>
+                    <div class="member-position">
+                            Operations Advisor
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="member member-7">
+                    <div class="member-picture">
+                        <div class="member-picture-container">
+                            <img src="img/about-us-shelley 4@4x.png" alt="">
+                        </div>
+                    </div>
+                    <div class="member-name">
+                            Shelley Wang
+                    </div>
+                    <div class="member-position">
+                            Visual Designer
+                    </div>
+                </div>
+                <div class="member member-8">
+                    <div class="member-picture">
+                        <div class="member-picture-container">
+                            <img src="img/about-us-natalie 2@4x.png" alt="">
+                        </div>
+                    </div>
+                    <div class="member-name">
+                            Natalie Kutcher
+                    </div>
+                    <div class="member-position">
+                            Human Resources Officer
+                    </div>
+                </div>
+                <div class="member member-9">
+                    <div class="member-picture">
+                        <div class="member-picture-container">
+                            <img src="img/about-us-jack 4@4x.png" alt="">
+                        </div>
+                    </div>
+                    <div class="member-name">
+                            Jack Zhang 
+                    </div>
+                    <div class="member-position">
+                            Front-End Developer
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col col-2x company-info">
+                    <img src="img/company-logo.png" alt="" class="company-logo">
+                    <p><span>Any questions? Let's chat!</span> Chat with us using the widget at the bottom-right of the
+                        page, or shoot us
+                        an email at
+                        <a href="mailto:info@2hats.com.au" class="mail">info@2hats.com.au</a>
+                    </p>
+                </div>
+                <div class="col col-1x menu-links">
+                    <ul>
+                        <li>
+                            <a href="#">Students</a>
+                        </li>
+                        <li>
+                            <a href="#">Companies</a>
+                        </li>
+                        <li>
+                            <a href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#">FAQ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col col-1x quick-links">
+                    <ul>
+                        <li>
+                            <a href="#">Stories &amp; Advice</a>
+                        </li>
+                        <li>
+                            <a href="#">Careers</a>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Terms &amp; Conditions</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col col-1x follow-us">
+                    <h4>Follow Us</h4>
+                    <a href="https://www.facebook.com/2hats.com.au/">
+                        <img src="img/facebook.svg" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/company/2hats-von-technology/">
+                        <img src="img/linkedin.svg" alt="">
+                    </a>
+                </div>
+            </div>
+            <p class="copyright">&copy; 2hats 2018. All Rights Reserved.</p>
+        </div>
+    </footer>
+
     <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
