--- a/faq.html
+++ b/faq.html
@@ -7,14 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2hats | faq</title>
     <link rel="icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-
+    <div class="container">
+        <h1>Frequently Asked Questions</h1>
+        <button>For students</button>
+        <button>For Companies</button>
+    </div>
     <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
