--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                             <a href="company.html">Companies</a>
                         </li>
                         <li>
-                            <a href="">About Us</a>
+                            <a href="about-us.html">About Us</a>
                         </li>
                         <li>
-                            <a href="">FAQ</a>
+                            <a href="faq.html">FAQ</a>
                         </li>
                         <li>
-                            <a href="">Stories &amp; Advice</a>
+                            <a href="https://blog.2hats.com.au/">Stories &amp; Advice</a>
                         </li>
                     </ul>
                     <button class="primary-button login">Log In</button>
