Fixed navigation links

--- a/faq.html
+++ b/faq.html
@@ -11,11 +11,46 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Frequently Asked Questions</h1>
-        <button>For students</button>
-        <button>For Companies</button>
-    </div>
+    <header>
+        <div class="top-menu">
+            <div class="container">
+                <img src="img/company-logo.png" alt="" class="logo">
+                <div class="navbar">
+                    <ul>
+                        <li>
+                            <a href="index.html">Students</a>
+                        </li>
+                        <li>
+                            <a href="company.html">Companies</a>
+                        </li>
+                        <li>
+                            <a href="about-us.html">About Us</a>
+                        </li>
+                        <li class="active">
+                            <a href="">FAQ</a>
+                        </li>
+                        <li>
+                            <a href="https://blog.2hats.com.au/">Stories &amp; Advice</a>
+                        </li>
+                    </ul>
+                    <button class="primary-button login">Log In</button>
+                    <button class="primary-button sign-up">Sign Up</button>
+                </div>
+                <div class="navbar-toggler" id="navbar-toggler">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="container">
+                <h1>Frequently Asked Questions</h1>
+                <button>For students</button>
+                <button>For Companies</button>
+            </div>
+        </div>
+    </header>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
