Fix our selection process section | companies page

--- a/about-us.html
+++ b/about-us.html
@@ -77,66 +77,55 @@
     </section>
 
     <section class="our-history">
-        <!-- <img src="img/about-us-path-3.svg" alt="" class="company-path"> -->
-        <div class="container">
-            <div class="timeline">
-                <div class="vertical-line"></div>
-                <div class="arrow-down"></div>
-            </div>
-            <h2>How Far We’ve Come</h2>
-            <div class="step step-1">
-                <div class="bullet">
-                </div>
-                <div class="step-content">
-                    <div class="step-date">September 2017</div>
-                    <div class="step-description">We began generating our idea for a career development service for
-                        businesses and students</div>
-                </div>
-            </div>
-            <div class="step step-2">
-                <div class="step-content">
-                    <div class="step-date">January 2018</div>
-                    <div class="step-description">Began development of our app and web portal</div>
-                </div>
-            </div>
-            <div class="step step-3">
-                <div class="step-content">
-                    <div class="step-date">January 2018</div>
-                    <div class="step-description">Tested our system and hired our own interns</div>
-                </div>
-            </div>
-            <div class="step step-4">
-                <div class="step-content">
-                    <div class="step-date">January 2018</div>
-                    <div class="step-description">Launched our new app and web portal!</div>
-                </div>
-            </div>
-            <div class="step step-5">
-                <div class="step-content">
-                    <div class="step-date">February 2018</div>
-                    <div class="step-description">O-Week Launch Campaign</div>
-                </div>
-            </div>
-            <div class="step step-6">
-                <div class="step-content">
-                    <div class="step-date">February 2018</div>
-                    <div class="step-description">Began signing up students into our system and reviewing their resumes</div>
-                </div>
-            </div>
-            <div class="step step-7">
-                <div class="step-content">
-                    <div class="step-date">March 2018</div>
-                    <div class="step-description">Our first group of interns finished their placements and over 50%
-                        received an offer to move to part-time positions </div>
-                </div>
-            </div>
-            <div class="step step-8">
-                <div class="step-content">
-                    <div class="step-date">May 2018</div>
-                    <div class="step-description">We re-launched our website with a new design</div>
-                </div>
-            </div>
+        <div class="timeline">
+            <div class="vertical-line"></div>
+            <div class="arrow-down"></div>
+            <div class="bullet bullet-1"></div>
+            <div class="bullet bullet-2"></div>
+            <div class="bullet bullet-3"></div>
+            <div class="bullet bullet-4"></div>
+            <div class="bullet bullet-5"></div>
+            <div class="bullet bullet-6"></div>
+            <div class="bullet bullet-7"></div>
+            <div class="bullet bullet-8"></div>
         </div>
+        <!-- <div class="container"> -->
+        <h2>How Far We’ve Come</h2>
+        <div class="step step-1">
+            <div class="step-date">September 2017</div>
+            <div class="step-description">We began generating our idea for a career development service for
+                businesses and students</div>
+        </div>
+        <div class="step step-2">
+            <div class="step-date">January 2018</div>
+            <div class="step-description">Began development of our app and web portal</div>
+        </div>
+        <div class="step step-3">
+            <div class="step-date">January 2018</div>
+            <div class="step-description">Tested our system and hired our own interns</div>
+        </div>
+        <div class="step step-4">
+            <div class="step-date">January 2018</div>
+            <div class="step-description">Launched our new app and web portal!</div>
+        </div>
+        <div class="step step-5">
+            <div class="step-date">February 2018</div>
+            <div class="step-description">O-Week Launch Campaign</div>
+        </div>
+        <div class="step step-6">
+            <div class="step-date">February 2018</div>
+            <div class="step-description">Began signing up students into our system and reviewing their resumes</div>
+        </div>
+        <div class="step step-7">
+            <div class="step-date">March 2018</div>
+            <div class="step-description">Our first group of interns finished their placements and over 50%
+                received an offer to move to part-time positions </div>
+        </div>
+        <div class="step step-8">
+            <div class="step-date">May 2018</div>
+            <div class="step-description">We re-launched our website with a new design</div>
+        </div>
+        <!-- </div> -->
     </section>
 
 
@@ -192,10 +181,10 @@
                         </div>
                     </div>
                     <div class="member-name">
-                            Samuel Hill
+                        Samuel Hill
                     </div>
                     <div class="member-position">
-                            Business Developer
+                        Business Developer
                     </div>
                 </div>
                 <div class="member member-5">
@@ -205,10 +194,10 @@
                         </div>
                     </div>
                     <div class="member-name">
-                            Perrin Anto Jones
+                        Perrin Anto Jones
                     </div>
                     <div class="member-position">
-                            Product Design Manager
+                        Product Design Manager
                     </div>
                 </div>
                 <div class="member member-6">
@@ -218,10 +207,10 @@
                         </div>
                     </div>
                     <div class="member-name">
-                            Minjie Shi 
+                        Minjie Shi
                     </div>
                     <div class="member-position">
-                            Operations Advisor
+                        Operations Advisor
                     </div>
                 </div>
             </div>
@@ -233,10 +222,10 @@
                         </div>
                     </div>
                     <div class="member-name">
-                            Shelley Wang
+                        Shelley Wang
                     </div>
                     <div class="member-position">
-                            Visual Designer
+                        Visual Designer
                     </div>
                 </div>
                 <div class="member member-8">
@@ -246,10 +235,10 @@
                         </div>
                     </div>
                     <div class="member-name">
-                            Natalie Kutcher
+                        Natalie Kutcher
                     </div>
                     <div class="member-position">
-                            Human Resources Officer
+                        Human Resources Officer
                     </div>
                 </div>
                 <div class="member member-9">
@@ -259,12 +248,39 @@
                         </div>
                     </div>
                     <div class="member-name">
-                            Jack Zhang 
+                        Jack Zhang
                     </div>
                     <div class="member-position">
-                            Front-End Developer
+                        Front-End Developer
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact-us">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <div class="contact-details">
+                <p>Address:
+                    Suite 703 <br>
+                    50 Clarence St <br>
+                    Sydney NSW 2000
+                </p>
+                <p>
+
+                    Email: <br>
+                    info@2hats.com.au
+
+                </p>
+                <p>
+                    Chat: <br>
+                    Reach out to us through <br>
+                    our chat bubble in the <br>
+                    bottom left corner </p>
+            </div>
+            <div class="map">
+                <iframe src="https://snazzymaps.com/embed/65782" frameborder="0" height="600px" width="100%"></iframe>
             </div>
         </div>
     </section>
