--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>2hats | home</title>
+    <title>2hats | Students</title>
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -64,8 +64,7 @@
 
     <section class="our-process main-process">
         <img src="img/home-path-5.png" alt="" class="timeline-path" style="width: 100%">
-        <img src="img/home-line-2.png" alt="" class="timeline-path-sm">
-        <!-- // -->
+        <div class="timeline-path-sm"></div>
         <div class="container">
 
             <div class="title">
