--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="faq-header">
         <div class="top-menu">
             <div class="container">
                 <img src="img/company-logo.png" alt="" class="logo">
@@ -45,9 +45,9 @@
         </div>
         <div class="banner">
             <div class="container">
-                <h1>Frequently Asked Questions</h1>
-                <button>For students</button>
-                <button>For Companies</button>
+                <h1 class="text-center">Frequently Asked Questions</h1>
+                <a href="https://2hats.com.au/faqstudents.html"><button>For students</button></a>
+                <a href="https://2hats.com.au/faqcompanies.html"><button>For Companies</button></a>
             </div>
         </div>
     </header>
