Fixed centering buttons issue on FAQ page

--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="banner">
+        <div class="banner text-center">
             <div class="container">
                 <h1 class="text-center">Frequently Asked Questions</h1>
                 <a href="https://2hats.com.au/faqstudents.html"><button>For students</button></a>
