Fixed about us mobile view

--- a/about-us.html
+++ b/about-us.html
@@ -92,32 +92,35 @@
         <!-- <div class="container"> -->
         <h2>How Far We’ve Come</h2>
         <div class="step step-1">
-            <div class="step-date">September 2017</div>
+            <!-- <div class="step-date">September 2017</div> -->
+            <div class="step-date">Sept 2017</div>
             <div class="step-description">We began generating our idea for a career development service for
                 businesses and students</div>
         </div>
         <div class="step step-2">
-            <div class="step-date">January 2018</div>
+            <!-- <div class="step-date">January 2018</div> -->
+            <div class="step-date">Jan 2018</div>
             <div class="step-description">Began development of our app and web portal</div>
         </div>
         <div class="step step-3">
-            <div class="step-date">January 2018</div>
+            <div class="step-date">Jan 2018</div>
             <div class="step-description">Tested our system and hired our own interns</div>
         </div>
         <div class="step step-4">
-            <div class="step-date">January 2018</div>
+            <div class="step-date">Jan 2018</div>
             <div class="step-description">Launched our new app and web portal!</div>
         </div>
         <div class="step step-5">
-            <div class="step-date">February 2018</div>
+            <!-- <div class="step-date">February 2018</div> -->
+            <div class="step-date">Feb 2018</div>
             <div class="step-description">O-Week Launch Campaign</div>
         </div>
         <div class="step step-6">
-            <div class="step-date">February 2018</div>
+            <div class="step-date">Feb 2018</div>
             <div class="step-description">Began signing up students into our system and reviewing their resumes</div>
         </div>
         <div class="step step-7">
-            <div class="step-date">March 2018</div>
+            <div class="step-date">Mar 2018</div>
             <div class="step-description">Our first group of interns finished their placements and over 50%
                 received an offer to move to part-time positions </div>
         </div>
