Adjust memmbers details in our team section | about us page

--- a/about-us.html
+++ b/about-us.html
@@ -266,8 +266,8 @@
             <h2>Contact Us</h2>
             <div class="contact-details">
                 <p>Address:
-                    Suite 703 <br>
-                    50 Clarence St <br>
+                    Suite 703
+                    50 Clarence St
                     Sydney NSW 2000
                 </p>
                 <p>
@@ -278,9 +278,9 @@
                 </p>
                 <p>
                     Chat: <br>
-                    Reach out to us through <br>
-                    our chat bubble in the <br>
-                    bottom left corner </p>
+                    Reach out to us through
+                    our chat bubble in the 
+                    bottom left corner
             </div>
             <div class="map">
                 <iframe src="https://snazzymaps.com/embed/65782" frameborder="0" height="600px" width="100%"></iframe>
