Adjusted typograph on mobile | companies page

--- a/company.html
+++ b/company.html
@@ -148,7 +148,7 @@
         </div>
     </section>
 
-    <section class="testimonials text-center">
+    <section class="testimonials companies-testimonials text-center">
         <div class="container">
             <div class="customer">
                 <div class="customer-img">
