Adjusted our selection process mobile view | companies page

--- a/about-us.html
+++ b/about-us.html
@@ -77,7 +77,7 @@
     </section>
 
     <section class="our-history">
-        <div class="timeline">
+        <div class="timeline vertical-timeline">
             <div class="vertical-line"></div>
             <div class="arrow-down"></div>
             <div class="bullet bullet-1"></div>
