--- a/company.html
+++ b/company.html
@@ -56,6 +56,19 @@
     </header>
 
     <section class="our-process selection-process">
+
+        <div class="timeline vertical-timeline">
+            <div class="vertical-line"></div>
+            <div class="arrow-down"></div>
+            <div class="bullet bullet-1"></div>
+            <div class="bullet bullet-2"></div>
+            <div class="bullet bullet-3"></div>
+            <div class="bullet bullet-4"></div>
+            <div class="bullet bullet-5"></div>
+            <div class="bullet bullet-6"></div>
+            <div class="bullet bullet-7"></div>
+        </div>
+
         <div class="container">
 
             <div class="title">
@@ -134,12 +147,12 @@
                     <p>Reduce your tedious recruitment process! Through our dedicated talent pool, we are able to
                         uncover the hidden gems connecting you with the top 5% of interviewed candidates. </p>
                 </div>
-                <div class="feature feature-1">
+                <div class="feature feature-2">
                     <h2>Elite Student Reach</h2>
                     <p>Our qualified SuperInterns have all been trained and assessed. They all possess the
                         interpersonal, critical thinking and problem skills to ensure their success. </p>
                 </div>
-                <div class="feature feature-1">
+                <div class="feature feature-3">
                     <h2>Execute for Success</h2>
                     <p>Trial a larger number of SuperInterns with our job-sharing system and build your relationship
                         with the best of the best. </p>
@@ -164,7 +177,8 @@
                         <p>Reduced recruitment costs by over $50,000 through 7 SuperIntern placements.</p>
                     </div>
                     <div class="achievement">
-                        <p>Over 50% of our SuperInterns received an offer to move to a part-time contract once they finished their placement period.</p>
+                        <p>Over 50% of our SuperInterns received an offer to move to a part-time contract once they
+                            finished their placement period.</p>
                     </div>
                 </div>
                 <p>"The placement that I got through 2hats really helped to shape me - I was able to get a head start
