Adjusted banner buttons | FAQ page

--- a/faq.html
+++ b/faq.html
@@ -46,13 +46,14 @@
         <div class="banner text-center">
             <div class="container">
                 <h1 class="text-center">Frequently Asked Questions</h1>
-                <a href="https://2hats.com.au/faqstudents.html"><button>For students</button></a>
-                <a href="https://2hats.com.au/faqcompanies.html"><button>For Companies</button></a>
+                <div class="faq-buttons">
+                    <a href="https://2hats.com.au/faqstudents.html"><button>For students</button></a>
+                    <a href="https://2hats.com.au/faqcompanies.html"><button>For Companies</button></a>
+                </div>
             </div>
         </div>
     </header>
     <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- <script src="js/main.js"></script> -->
     <script>
         // toggle navbar in mobile view
         $('#navbar-toggler').click(function () {
