updated step title hover effect in  selection process section | Companies page

--- a/company.html
+++ b/company.html
@@ -80,7 +80,7 @@
             <img src="img/company-path-9.png" alt="" class="company-path">
             <div class="step step-1">
                 <div class="step-content">
-                    <div class="step-title">Resume Submission &amp; Review</div>
+                    <div class="step-title"><span>Resume Submission &amp; Review</span></div>
                     <div class="step-description">Analytical review and selection of candidates where only the top 20%
                         pass this stage.</div>
                 </div>
@@ -88,7 +88,7 @@
             </div>
             <div class="step step-2">
                 <div class="step-content">
-                    <div class="step-title">Online Interview</div>
+                    <div class="step-title"><span>Online Interview</span></div>
                     <div class="step-description">A secondary assessment of capabilities to narrow down to the best of
                         the best. We evaluate communication skills and logic.</div>
                 </div>
@@ -96,7 +96,7 @@
             </div>
             <div class="step step-3">
                 <div class="step-content">
-                    <div class="step-title">Personality Profiling</div>
+                    <div class="step-title"><span>Personality Profiling</span></div>
                     <div class="step-description">Assessing the fit of character validated by a third party, funnelling
                         candidates into areas of strength.</div>
                 </div>
@@ -104,7 +104,7 @@
             </div>
             <div class="step step-4">
                 <div class="step-content">
-                    <div class="step-title">Face-to-Face Interview</div>
+                    <div class="step-title"><span>Face-to-Face Interview</span></div>
                     <div class="step-description">Conducted through the 2hats Essential-Criteria Model, we validate
                         prior experience and check developed skillsets.</div>
                 </div>
@@ -112,7 +112,7 @@
             </div>
             <div class="step step-5">
                 <div class="step-content">
-                    <div class="step-title">Pitch &amp; Solution Creation</div>
+                    <div class="step-title"><span>Pitch &amp; Solution Creation</span></div>
                     <div class="step-description">Students generate a pitch and a presentation to solve a business
                         problem in their area. <br>We assess soft skills in presentation, communication and
                         problem-solving.</div>
@@ -121,7 +121,7 @@
             </div>
             <div class="step step-6">
                 <div class="step-content">
-                    <div class="step-title">Role &amp; Career Training</div>
+                    <div class="step-title"><span>Role &amp; Career Training</span></div>
                     <div class="step-description">Our SuperInterns are trained in the specific role they are entering
                         into, all ready to start the next day. We reduce the risk and increase the speed of
                         on-boarding.</div>
@@ -130,7 +130,7 @@
             </div>
             <div class="step step-7">
                 <div class="step-content">
-                    <div class="step-title">Placement &amp; Ongoing Career Development</div>
+                    <div class="step-title"><span>Placement &amp; Ongoing Career Development</span></div>
                     <div class="step-description">Only the top 5% of candidates receive a placement. We help grow the
                         SuperInterns with feedback consultations, creating the best 2hats experience.</div>
                 </div>
